[package]
name = "junction"
version = "0.1.5" # Also update `html_root_url` in lib.rs
authors = ["Lzu Tao <taolzu@gmail.com>"]
categories = ["api-bindings", "os::windows-apis"]
documentation = "https://docs.rs/junction/*/x86_64-pc-windows-msvc/junction/"
edition = "2018"
exclude = [
    "/ci/*",
    "/HOW-TO-RELEASE.md",
    "/azure-pipelines.yml",
]
keywords = ["junction", "symlink"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lzutao/junction"
description = "library for working with NTFS junctions"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[target.'cfg(windows)'.dependencies.scopeguard]
version = "1"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "fileapi",
    "guiddef",
    "handleapi",
    "ioapiset",
    "processthreadsapi",
    "securitybaseapi",
    "winbase",
    "winioctl",
    "winnt",
]

[dev-dependencies]
tempfile = "3"
