[package]
name = "junction"
version = "1.0.0" # Also update `html_root_url` in lib.rs
authors = ["Lzu Tao <taolzu@gmail.com>"]
categories = ["api-bindings", "os::windows-apis"]
documentation = "https://docs.rs/junction/*/x86_64-pc-windows-msvc/junction/"
edition = "2018"
exclude = [
    "/.github",
    "/HOW-TO-RELEASE.md",
]
keywords = ["junction", "symlink"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lzutao/junction"
description = "library for working with NTFS junctions"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[target.'cfg(windows)'.dependencies.scopeguard]
version = "1"
default-features = false

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[dev-dependencies]
tempfile = "3"
